Fix warning box color in dark mode

--- a/static/css/themes/dark.css
+++ b/static/css/themes/dark.css
@@ -37,3 +37,7 @@ code {
   background-color: #616161 !important;
   color: white !important;
 }
+
+.warningBox {
+  color: #000;
+}
